# shitter

./: .gitignore  README.md  shitter.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs
src/Lib/: Client.hs  OAuth.hs  Twitter.hs  Types.hs
src/Net/Monad/: Shitpost.hs  Twitter.hs
src/Net/Monad/Shitpost/: Core.hs  Tumblr.hs  Twitter.hs  Types.hs
src/Net/Monad/Twitter/: OAuth.hs  Types.hs
test/: Spec.hs
