name:                shitter
version:             0.1.0.1
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/gatlin/shitter#readme
license:             BSD3
license-file:        LICENSE
author:              Gatlin Johnson
maintainer:          gatlin@niltag.net
copyright:           2016 Gatlin Johnson
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Net.Monad.Shitpost, Net.Monad.Shitpost.Types,
                       Net.Monad.Shitpost.Core,
                       Net.Monad.Shitpost.Twitter,
                       Net.Monad.Shitpost.Tumblr
  build-depends:       base >= 4.7 && < 5,
                       http-client >= 0.4.3.1,
                       http-client-tls,
                       http-types,
                       base64-bytestring,
                       bytestring,
                       aeson,
                       entropy,
                       time,
                       transformers,
                       cryptohash,
                       tubes,
                       mtl,
                       oauth10a
  default-language:    Haskell2010

test-suite shitter-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shitter
                     , tubes
                     , bytestring
                     , http-types
                     , http-client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/shitter
